#523|+Harsha | fixed calender bugs on ie.

--- a/modules/openlmis-web/src/main/webapp/public/less/ie9.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/ie9.less
@@ -8,3 +8,7 @@ ng-include[src*='navigation.html'] {
 .login-page {
   border-radius: 0;
 }
+.ui-datepicker select.ui-datepicker-year{
+  color: #555;
+  background-color: white;
+}
